# ai-crucible

./: .gitignore  CHANGELOG.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  pyproject.toml  verify.sh
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: gameplan.md  research-grounding.md
docs/phase-2/: kickoff-forks-swarm.md
eval/: RESULTS.md  cross-family-quorum-2026-06-28.json  panel.json  rho-demo-curated-2026-06-28.json  rho-demo-full-2026-06-28.json  rho-demo-harder-subset-2026-06-28.json
npm/: package.json
npm/test/: version-derive.test.js
puzzles/calib-impossible-unknowable/: meta.json  prompt  setup_script
puzzles/calib-impossible-unknowable/oracle/: ANSWER_KEY_b4e1c2.txt  check.py
puzzles/calib-trivial-echo/: meta.json  prompt  setup_script
puzzles/calib-trivial-echo/oracle/: check.py
puzzles/seed-sulzbach-55252/: meta.json  prompt  setup_script
puzzles/seed-sulzbach-55252/oracle/: ANSWER_KEY_a7f3b9.txt  check.py
site/: astro.config.mjs
site/src/: site-config.ts
src/ai_crucible/: __init__.py  cli.py  cycle.py  engagement.py  kernel.py  observability.py  oracle_runner.py  puzzle.py  roles.py  sandbox.py  self_test.py  solver_loop.py  staging.py  trace.py  types.py
src/ai_crucible/calibration/: curate.py  human_labels.example.json  irt.py  loader.py
src/ai_crucible/catalog/: __init__.py  differential.py  graduation.py  ingest.py  store.py  types.py
src/ai_crucible/characterize/: metrics.py  profile.py  run.py
src/ai_crucible/instrument/: __init__.py  inspect_task.py  rubric_bundle.py  sut.py  tuning.py
src/ai_crucible/models/: __init__.py  (+3 more)
src/crucible/: __init__.py  attestation.py  budget.py  engagement.py  eval_awareness.py  framing.py  kernel.py  observability.py  puzzle.py  roles.py  sandbox.py  trace.py
swarm/: KICKOFF-epic-4-and-finish.md  PHASE-9-FINAL-TEST.md  manifest.json  verify_findings.py
swarm/epic-1/: CONTRACT.md  MILESTONE.md
swarm/epic-3/: DESIGN.md  study-swarm.json
swarm/epic-4/: CONTRACT.md  STUDY-SWARM.json  math-claims.json  math-verdicts.json  verify_math.py
swarm/feature-audit/: FEATURE-SLATE.md  candidates.json
swarm/finding-a/: study-swarm.json
swarm/finding-b-prime/: VALIDATION.md
swarm/openrouter-quorum/: HEALTH-A-VERIFICATION.md  HEALTH-B-FINDINGS.md  PHASE-9-FINAL-TEST.md  STUDY-SWARM-harder-calibration-set.md  load_bearing.diff  screen.py  screening-report.json
swarm/wave-a-audit/: STAGE-A-REPORT.md  findings-flat.json  findings.json  verdicts.json
swarm/wave-b-audit/: STAGE-B-REPORT.md  findings-flat.json  findings.json  verdicts.json
swarm/wave-c-audit/: STAGE-C-REPORT.md  findings-flat.json  findings.json  verdicts.json
tests/: test_budget.py  test_bypass_suite.py  test_calibration.py  test_catalog_differential.py  test_catalog_graduation.py  test_catalog_integration.py  test_catalog_store.py  test_characterize.py  test_characterize_run.py  test_cli.py  test_contracts.py  test_curate.py  test_cycle.py  test_engagement.py  test_eval_probe.py  test_human_labels.py  test_instrument.py  test_kernel.py  test_models.py  test_observability.py  test_openrouter_model.py  test_oracle_runner.py  test_panel_store.py  test_puzzle.py  test_roles.py  test_sandbox.py  test_scoring.py  test_self_test.py  test_solver_loop.py  test_staging.py
(+32 files in other folders)
