[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-crucible"
version = "0.4.0"
description = "Diagnostic adversarial game for frontier LLMs — a policy-enforced kernel that mediates a Designer/Solver/Judge cycle, scores against a hidden oracle, and curates a Lab/Arena/Regression catalog."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }]
keywords = ["llm", "evaluation", "auditing-game", "reward-hacking", "inspect-ai", "diagnostic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

# Kernel is a thin policy layer on Inspect AI (research-grounding §10.2).
dependencies = [
  # Upper bound: inspect-ai is pre-1.0 and the kernel sits directly on its
  # Task/Sample/EvalLog surfaces — cap at <1 so a 1.0 API break can't be pulled
  # silently on a fresh install. The instrument.inspect_task runtime check warns
  # within 0.x when the installed minor leaves the tested range (instrument-future-deps-002).
  "inspect-ai>=0.3,<1",
  "pydantic>=2.5",
  "numpy>=1.26",
  "scipy>=1.11",       # scipy.stats.sobol_indices (tuning), Clopper-Pearson
]

[project.optional-dependencies]
# Statistical stack (research-grounding §1, §9.3): McNemar, beta-binomial.
stats = ["statsmodels>=0.14"]
# Dev / CI toolchain.
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.11"]

[project.urls]
Homepage = "https://github.com/dogfood-lab/ai-crucible"
Repository = "https://github.com/dogfood-lab/ai-crucible"

[project.scripts]
ai-crucible = "ai_crucible.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_crucible"]

[tool.uv]
# Security floors on TRANSITIVE dependencies (Ship Gate D / pip-audit). We don't
# import these directly — aiohttp arrives via s3fs, starlette via fastapi <-
# inspect-ai — so we constrain the resolver rather than declare them as runtime
# deps. Bumped to clear advisory-database drift (CVEs published after the last
# green run; no first-party code changed):
#   aiohttp   >=3.14.1 — CVE-2026-34993, -47265, -54273..54280, -50269
#   starlette >=1.3.1  — CVE-2026-54282 (fix 1.3.0), CVE-2026-54283 (fix 1.3.1)
constraint-dependencies = [
  "aiohttp>=3.14.1",
  "starlette>=1.3.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# `swarm/` holds dogfood-swarm receipt tooling (verify harness, manifests), not
# shipped package code — it is not in the wheel and is not held to the package's
# line-length/style gate.
extend-exclude = ["swarm"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "slow: deselect with -m 'not slow'",
  "integration: end-to-end tests that run a full attempt cycle",
  "gpu: requires a local model panel (Phase 2)",
]

[tool.coverage.report]
# Single source of truth for the coverage floor; CI reads this via tomllib.
fail_under = 60

[tool.mypy]
python_version = "3.11"
packages = ["ai_crucible"]
ignore_missing_imports = true
